# Bridge_ScaleCmd_Rust

./: .gitignore  AVG_OFF.bat  BUILD.bat  BUILD_WINDOWS.md  CAFFEINE_AI_INTEGRATION_GUIDE.md  CHANGELOG.md  COMPILATION_CHECK.md  CONTRIBUTING.md  Check-Prerequisites.ps1  Create-InstallerPackage.ps1  Dockerfile  Dockerfile.dev  Dockerfile.test  INSTALL-SERVICE.bat  INSTALL.bat  PLAN_WINDOWS_INSTALLER.md  README.md  REFACTOR_PLAN.md  REFACTOR_PROGRESS.md  START-SERVICE.bat  START_SERVICE.bat  STOP-SERVICE.bat  Setup-MinGW.ps1  TESTING_AND_DEPLOYMENT.md  UNINSTALL-SERVICE.bat  WINDOWS_INSTALLATION_GUIDE.md  WINDOWS_PACKAGE_SUMMARY.md  WINDOWS_README.md  build-mingw.ps1  build-rust-mingw.ps1  build-rust.bat  check-workspace.ps1  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  produkcyjne rozwiązanie Windows installer + Windows Service.md  run-backend.ps1  run-tests.bat  (+18 more)
ScaleIT_Bridge_Windows_v1.0.0/: .env.example
docs/: ERR_BLOCKED_BY_CLIENT_FIX.md  INNO_SETUP_INSTALLER_GUIDE.md  NETWORK_TROUBLESHOOTING.md  SWAGGER_API_DOCUMENTATION.md  TROUBLESHOOTING.md  UPDATE_STRATEGY.md  WINDOWS_INSTALLATION_GUIDE.md
e2e/: global-setup.ts  global-teardown.ts  scaleit-bridge.spec.ts
installer/: README.md  ScaleCmdBridge.iss
scripts/: deploy.sh  (+6 more)
src-rust/: .gitignore  BACKEND_GUIDELINES.md  Cargo-minimal.toml  Cargo-original.toml  Cargo.toml
src-rust/benches/: bridge_benchmarks.rs
src-rust/config/: devices.json  dfw-mapowanie-komend.md
src-rust/host/: Cargo.toml
src-rust/host/src/: commands.rs  connection.rs  error.rs  lib.rs  protocol.rs
src-rust/miernik/: Cargo.toml
src-rust/miernik/src/: device.rs  devices.rs  error.rs  lib.rs  models.rs  parsers.rs
src-rust/src/: device_manager.rs  error.rs  lib.rs  main.rs
src-rust/src/adapters/: adapter.rs  adapter_enum.rs  dini_argeo.rs  mod.rs  rinstrum.rs
src-rust/src/models/: device.rs  host.rs  legacy_device.rs  miernik.rs  mod.rs  weight.rs
src-rust/tests/: api_test.rs  device_test.rs  integration_test.rs  minimal_test.rs  property_test.proptest-regressions  property_test.rs
(+47 files in other folders)
