[package]
name = "scaleit-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
parking_lot = "0.12"
lazy_static = "1.4"
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.13", features = ["toml"] }
serialport = "4.3"
futures = "0.3"