[package]
name = "scaleit-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
log = "0.4"
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serialport = "4.2"
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
env_logger = "0.11"
config = "0.14"
dotenv = "0.15"
ctrlc = "3.4"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
proptest = "1.0"

[profile.test]
opt-level = 1

[[test]]
name = "minimal_tests"
path = "tests/minimal_test.rs"
