[package]
name = "scaleit-host"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
parking_lot = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serialport = "4.2"
chrono = { version = "0.4", features = ["serde"] }

