[package]
name = "scaleit-miernik"
version = "0.1.0"
edition = "2021"

[dependencies]
scaleit-host = { path = "../host" }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
log = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
lazy_static = "1.4"

